--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@alan-ai/alan-sdk-web": "^1.8.42",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@google/generative-ai": "^0.3.1",
     "@headlessui/react": "^1.7.9",
     "@heroicons/react": "^2.0.14",
     "@mui/icons-material": "^5.11.0",
@@ -23,7 +24,7 @@
     "appwrite": "^10.2.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "marked": "^4.2.12",
+    "marked": "^4.3.0",
     "next": "13.1.6",
     "openai": "^4.29.2",
     "react": "18.2.0",
