--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "appwrite": "^10.2.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "fs": "^0.0.1-security",
     "marked": "^4.3.0",
     "next": "13.1.6",
+    "nodemailer": "^6.9.13",
     "openai": "^4.29.2",
     "react": "18.2.0",
     "react-circular-progressbar": "^2.1.0",
@@ -36,6 +38,7 @@
   },
   "devDependencies": {
     "@types/marked": "^4.0.8",
+    "@types/nodemailer": "^6.4.14",
     "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.13",
     "encoding": "^0.1.13",
