--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "fs": "^0.0.1-security",
+    "json-server": "^1.0.0-alpha.23",
     "marked": "^4.3.0",
     "next": "13.1.6",
     "nodemailer": "^6.9.13",
