--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "appwrite": "^10.2.0",
+    "axios": "^1.6.8",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "fs": "^0.0.1-security",
