--- a/package.json
+++ b/package.json
@@ -30,13 +30,17 @@
     "marked": "^4.3.0",
     "next": "13.1.6",
     "nodemailer": "^6.9.13",
+    "nutrition-ai": "^2.0.0",
     "openai": "^4.29.2",
     "react": "18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.1",
     "swiper": "^9.0.2",
     "typescript": "4.9.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "react-dropzone": "^14.2.3",
+    "compressorjs": "^1.2.1"
   },
   "devDependencies": {
     "@types/marked": "^4.0.8",
