--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "marked": "^4.3.0",
     "next": "13.1.6",
     "nodemailer": "^6.9.13",
+    "nutrition-ai": "^2.0.0",
     "openai": "^4.29.2",
     "react": "18.2.0",
     "react-circular-progressbar": "^2.1.0",
