--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "18.0.10",
     "appwrite": "^10.2.0",
     "axios": "^1.6.8",
+    "compressorjs": "^1.2.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "fs": "^0.0.1-security",
@@ -35,12 +36,11 @@
     "react": "18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
     "swiper": "^9.0.2",
     "typescript": "4.9.5",
-    "uuid": "^9.0.0",
-    "react-dropzone": "^14.2.3",
-    "compressorjs": "^1.2.1"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/marked": "^4.0.8",
